5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1630_2946.log
== TEST (2019-04-02 16:08:07) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios"))

-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:08:51) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios:"))
mt=float(input("media dos trabalhos:"))

-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:33) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios:"))
mt=float(input("media dos trabalhos:"))
mp=float(input("media das provas:"))

-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:09:40) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios:"))
mt=float(input("media dos trabalhos:"))
mp=float(input("media das provas:"))

-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:10:59) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios:"))
mt=float(input("media dos trabalhos:"))
mp=float(input("media das provas:"))

#Media final 
mf=(ml+mt+mp)
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:06) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios:"))
mt=float(input("media dos trabalhos:"))
mp=float(input("media das provas:"))

#Media final 
mf=(ml+mt+mp)
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:11:47) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios:"))
mt=float(input("media dos trabalhos:"))
mp=float(input("media das provas:"))

#Media final 
mf=(ml+mt+mp)
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:12:07) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios:"))
mt=float(input("media dos trabalhos:"))
mp=float(input("media das provas:"))

#Media final 
mf=(ml+mt+mp)
-- EXECUTION TIME:
0.216256
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:

-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:12:30) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

#Media final 
mf=(ml+mt+mp)
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:12:40) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

#Media final 
mf=ml+mt+mp
-- EXECUTION TIME:
0.239516
-- TEST CASE 1:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:

-- TEST CASE 2:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:12:41) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

#Media final 
mf=ml+mt+mp
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:12:41) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

#Media final 
mf=ml+mt+mp
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:13:00) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media final 
mf=ml+mt+mp
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:13:00) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media final 
mf=ml+mt+mp
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:13:02) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media final 
mf=ml+mt+mp
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:13:02) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media final 
mf=ml+mt+mp
-- OUTPUT:
103630.85
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:14:14) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

mf=float(input(ml+mt+mp))
-- EXECUTION TIME:
0.190494
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2946/main.py", line 9, in <module>
    mf=float(input(ml+mt+mp))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:14) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

mf=float(input(ml+mt+mp))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mf=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:15) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

mf=float(input(ml+mt+mp))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mf=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:15) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

mf=float(input(ml+mt+mp))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mf=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:14:16) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

mf=float(input(ml+mt+mp))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    mf=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:15:10) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media Final

mf=float(input(ml+mt+mp))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    mf=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:16:50) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media Final

mf=float(input(ml+mt+mp)/3)

print(round(mf,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    mf=float(input(ml+mt+mp)/3)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:18:28) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media

m=float(input(ml+mt+mp))
mf=float(input(m/3))
print(round(mf,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:02) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

#Media

m=float(input(ml+mt+mp))

mf=float(input(m/3))

print(round(mf,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:19:43) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

#Media

m=float(input(ml+mt+mp))

mf=float(input(m%3))

print(round(mf,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:20:41) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%

ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

#Media

m=float(input(ml+mt+mp))
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:13) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=float(input(ml+mt+mp))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:21:30) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(ml+mt+mp)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:22:03) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(input(ml+mt+mp))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:23:55) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(input(ml+mt+mp))
#Media final
mf=(input(m//3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:09) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(input(ml+mt+mp))
#Media final
mf=(input(m//3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:10) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(input(ml+mt+mp))
#Media final
mf=(input(m//3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:10) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(input(ml+mt+mp))
#Media final
mf=(input(m//3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:24:41) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(input(ml+mt+mp))
#Media final
mf=float(input(m/3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:03) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(input(ml+mt+mp))
#Media final
mf=float(input(m/3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:25:36) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(input(ml+mt+mp))
#Media final
mf=string(input(m/3))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:27:29) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(input(ml+mt+mp))
#Media final
print=m


-- EXECUTION TIME:
0.151138
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1630/2946/main.py", line 8, in <module>
    m=(input(ml+mt+mp))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:29) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(input(ml+mt+mp))
#Media final
print=m


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:37) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(ml+mt+mp))
#Media final
print=m


-- ERROR:
File "XXXX", line 8
    m=(ml+mt+mp))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:41) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=(ml+mt+mp)
#Media final
print=m


-- ERROR:
File "XXXX", line 8
    m=(ml+mt+mp))
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:27:54) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=float(input(ml+mt+mp))
#Media final
print=m


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:28:09) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=float(input(ml+mt+mp))
#Media final
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:28:13) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=float(input(ml+mt+mp))
#Media final
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:11) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=float(input(ml+mt+mp))
#Media final
print(m/3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:29:13) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))
#Media
m=float(input(ml+mt+mp))
#Media final
print(m/3)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:41) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

print(ml+mt+mp)
m=float(input(ml+mt+mp))
#Media final
print(m/


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:57) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m/


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:58) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m/


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:30:59) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m/


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:00) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m/


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:03) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:04) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:04) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:04) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:05) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:05) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:05) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:06) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:06) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:06) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:06) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:07) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:07) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:09) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final
print(m


-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:18) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:20) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:39) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:31:49) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios A:"))
mt=float(input("media dos trabalhos B:"))
mp=float(input("media das provas C:"))

m=float(input(ml+mt+mp))

#Media final



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:32:55) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=float(input(ml+mt+mp))

#Media final



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:21) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=float(input(ml+mt+mp))

#Media final




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:22) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=float(input(ml+mt+mp))

#Media final




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:23) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=float(input(ml+mt+mp))

#Media final




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:33:24) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=float(input(ml+mt+mp))

#Media final




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:34:44) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=float(input(ml+mt+mp))

#Media final
 print(m)



-- ERROR:
File "XXXX", line 11
    print(m)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:34:45) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=float(input(ml+mt+mp))

#Media final
 print(m)



-- ERROR:
File "XXXX", line 11
    print(m)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:18) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=f(ml+mt+mp)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=f(ml+mt+mp)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:30) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=(ml+mt+mp)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=f(ml+mt+mp)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:35:52) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=float(ml+mt+mp)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=f(ml+mt+mp)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:03) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=float(ml+mt+mp)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=f(ml+mt+mp)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:36:03) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))

m=float(ml+mt+mp)





-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=f(ml+mt+mp)
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:03) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp))
#media final




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:03) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp))
#media final




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:43) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
print(m=float(input(ml+mt+mp)))
#media final




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(m=float(input(ml+mt+mp)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:43:44) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
print(m=float(input(ml+mt+mp)))
#media final




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(m=float(input(ml+mt+mp)))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:44:02) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
print(ml+mt+mp)
#media final




-- OUTPUT:
19.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:29) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp)
#media final
mf=m



-- ERROR:
File "XXXX", line 10
    mf=m
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:31) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp)
#media final
mf=m



-- ERROR:
File "XXXX", line 10
    mf=m
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:35) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp)
#media final
mf=(m)



-- ERROR:
File "XXXX", line 10
    mf=(m)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:37) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp)
#media final
mf=(m)



-- ERROR:
File "XXXX", line 10
    mf=(m)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:45:55) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp)
#media final
mf=float(input(m))



-- ERROR:
File "XXXX", line 10
    mf=float(input(m))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:04) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp)
#media final
mf=(m)



-- ERROR:
File "XXXX", line 10
    mf=(m)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:18) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp)
#media final




-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:27) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp)
#media final




-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:28) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp)
#media final




-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:28) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp)
#media final




-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:28) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp)
#media final




-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:29) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp)
#media final




-- ERROR:
File "XXXX", line 13
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:36) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:46:48) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
print(total)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:19) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:54) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(mf/3)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:47:55) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(mf/3)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:06) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(mf/3)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:10) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(mf/3)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:12) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(mf/3)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:42) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print("mf/3")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:48:43) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print("mf/3")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:49:18) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(total/3)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:49:19) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(total/3)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:50:20) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(round(mf,3)



-- ERROR:
File "XXXX", line 14
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:50:21) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(round(mf,3)



-- EXECUTION TIME:
0.225321
-- ERROR:
  File "/home/codebench/codes/1630/2946/main.py", line 14
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:50:22) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(round(mf,3)



-- EXECUTION TIME:
0.108777
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1630/2946/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 16:50:22) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
mf=(total)
print(round(mf,3)



-- EXECUTION TIME:
0.186169
-- ERROR:
  File "/home/codebench/codes/1630/2946/main.py", line 14
    
    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:51:23) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
total=float(input(ml+mt+mp))
#media final
print(total)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:03) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp))
#media final
print(total)
print(round())



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:09) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp))
#media final
print(total)
print(round(m,3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:52:19) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp))
#media final
print(m)
print(round(m,3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 16:53:36) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
print(m=(ml+mt+mp))
#media
m=float(input(ml+mt+mp))
#media final
print(m)
print(round(m,3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(m=(ml+mt+mp))
TypeError: 'm' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:43:21) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp))
#media final
m=float
print(round(m,3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 01:43:21) 
-- CODE:
#Media dos laboratorios 25%
#Media dos trabalhos 30%
#Media das provas 45%
ml=float(input("media dos laboratorios :"))
mt=float(input("media dos trabalhos :"))
mp=float(input("media das provas :"))
#media
m=float(input(ml+mt+mp))
#media final
m=float
print(round(m,3))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    m=float(input(ml+mt+mp))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
